--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://helping-the-tortoise.github."
+baseURL = "https://helping-the-tortoise.github.io/blog"
 languageCode = "en-us"
 theme = "poison"
 paginate = 10
@@ -29,24 +29,24 @@ pluralizelisttitles = false   # removes the automatically appended "s" on sideba
     ]
 
     # Links to your socials.  Comment or delete any you don't need/use.
-    #discord_url = "https://discord.com"
-    email_url = "mailto://user@domain"
-    #facebook_url = "https://facebook.com"
-    #flickr_url = "https://flickr.com"
+    # discord_url = "https://discord.com"
+    # email_url = "mailto://user@domain"
+    # facebook_url = "https://facebook.com"
+    # flickr_url = "https://flickr.com"
     github_url = "https://github.com"
-    #gitlab_url = "https://gitlab.com"
-    #instagram_url = "https://instagram.com"
-    #linkedin_url = "https://linkedin.com"
+    # gitlab_url = "https://gitlab.com"
+    # instagram_url = "https://instagram.com"
+    # linkedin_url = "https://linkedin.com"
     mastodon_url = "https://mastodon.social"
-    #matrix_url = "https://matrix.org"
+    # matrix_url = "https://matrix.org"
     telegram_url = "https://telegram.org"
-    #tryhackme_url = "https://tryhackme.com"
+    # tryhackme_url = "https://tryhackme.com"
     twitter_url = "https://twitter.com"
-    #x_url = "https://x.com"
-    #xmpp_url = "https://xmpp.org"
-    youtube_url = "https://youtube.com"
-    #signal_url = "https://signal.org"
-    #bluesky_url = "https://bsky.app"
+    # x_url = "https://x.com"
+    # xmpp_url = "https://xmpp.org"
+    # youtube_url = "https://youtube.com"
+    # signal_url = "https://signal.org"
+    # bluesky_url = "https://bsky.app"
 
     # NOTE: If you don't want to use RSS, comment or delete the following lines
     # Adds an RSS icon to the end of the socials which links to {{ .Site.BaseURL }}/index.xml
