--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://helping-the-tortoise.github.io/blog"
+baseURL = "https://helping-the-tortoise.github.io/"
 languageCode = "en-us"
 theme = "poison"
 paginate = 10
